# openenv-privilege-desk

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  __init__.py  client.py  evals.py  evals_hf.ipynb  evals_hf.py  extract_wandb_metrics.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  run_training.sh  run_training_openenv.sh
env/: __init__.py  action_router.py  tools.py  world_state.py
outputs/: endpoint_responses.txt
pipeline/: __init__.py  episode_generator.py  task_templates.py  toxic_graph.py
reward/: __init__.py  aggregator.py  grader.py
server/: __init__.py  app.py  gradio_ui.py  privilege_desk_environment.py  requirements.txt
training/: error.txt  http_logs.txt  output.txt  requirements_train.txt  train_grpo.py  train_grpo_direct.py  train_grpo_openenv.py
