# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-privilege_desk"
version = "1.0.0"
description = "PrivilegeDesk: Zero-Standing-Privilege Ops environment for training AI agents on enterprise IAM tasks"
requires-python = ">=3.12,<3.14"
dependencies = [
    # Core OpenEnv runtime
    "openenv-core[core]>=0.2.2",
    # Standard library only — no extra ML dependencies needed
    "pydantic>=2.5.0,<3.0.0",
    "openai>=1.0.0", # for baseline inference script
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
    "wandb>=0.26.0",
    "weave>=0.52.37",
    "python-dotenv>=1.2.2",
    "langchain>=1.2.15",
    "langchain-openai>=1.1.15",
    "pandas>=3.0.2",
    "matplotlib>=3.10.8",
]

[tool.uv]
environments = ["sys_platform != 'win32'"]

[project.optional-dependencies]
train = [
    "trl[vllm]==0.29.0",
    "vllm==0.11.2",
    "torch>=2.8.0,<2.10.0",
    "peft==0.15.2",
    "transformers>=4.57.6",
    "datasets",
    "tensorboard",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
# Server entry point - enables running via: uv run --project . server
# or: python -m privilege_desk.server.app
server = "privilege_desk.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "privilege_desk", "privilege_desk.server",
    "pipeline", "env", "reward",
]
[tool.setuptools.package-dir]
"privilege_desk" = "."
"privilege_desk.server" = "server"
"pipeline" = "pipeline"
"env" = "env"
"reward" = "reward"
